[package]
name = "dors"
version = "0.0.1"
authors = ["Andrew Klitzke <nafango2@gmail.com>"]
edition = "2018"
description = "No fuss, workspace-friendly task runner for cargo"
repository = "https://github.com/aklitzke/dors"
homepage = "https://github.com/aklitzke/dors"
publish = false

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
cargo_metadata = "0.9.1"
rand = "0.7"
clap = "2.33"
colored = "1.9"
