[package]
name = "dors"
version = "0.0.8"
authors = ["Andrew Klitzke <andrewknpe@gmail.com>"]
edition = "2018"
description = "No-fuss workspace-friendly task runner for cargo"
repository = "https://github.com/aklitzke/dors"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["task-runner", "make", "run", "command", "cargo"]
categories = [
  "development-tools",
  "development-tools::build-utils",
  "development-tools::cargo-plugins",
  "embedded",
  "web-programming"
]

[badges]
travis-ci = { repository = "aklitzke/dors" }

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
cargo_metadata = "0.9.1"
rand = "0.7"
clap = "2.33"
colored = "1.9"
